@@ -404,11 +404,11 @@ public class SessionRepository {
     private List<Long> getSessionListFromDirectoryCache(List<ChildData> children) {
         return getSessionList(children.stream()
                                       .map(child -> Path.fromString(child.getPath()).getName())
-                                      .collect(Collectors.toList()));
+                                      .toList());
     }
 
     private List<Long> getSessionList(List<String> children) {
-        return children.stream().map(Long::parseLong).collect(Collectors.toList());
+        return children.stream().map(Long::parseLong).toList();
     }
 
     private void loadRemoteSessions(ExecutorService executor) throws NumberFormatException {
